2008-07-13  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/:

	Fix gdk_spawn_on_screen binding

	* vapi/gdk-2.0.vapi: regenerated

2008-07-12  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodememberaccessbinding.vala:

	Fix access to private struct fields, fixed bug 542032.

	* tests/structs.vala:
	* tests/structs.exp:

	Added test cases for private struct fields.

2008-07-12  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodemethodbinding.vala:

	Remove recent introduced gcc warnings related to abstract interface
	methods

2008-07-11  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbol.vala:

	Don't transform non-lowercase names to CamelCase

2008-07-11  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodemethodbinding.vala:
	* vala/valamethod.vala:

	Generate a type_real_name function also for abstract methods to warn
	from buggy subclasses which fail to implement the abstract methods,
	based on patch by Jared Moore, fixes bug 531195

2008-07-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Various fixes, based on patch by Jorn Baayen

	* vapi/gtk+-2.0.vapi: regenerated

2008-07-10  Raffaele Sandrini  <raffaele@sandrini.ch>

	* ccode/valaccodedeclaration.vala:
	* ccode/valaccodemodifiers.vala:
	* gobject/valatyperegisterfunction.vala:

	Revert commit revision 1691 due bad regressions, reopens bug
	540705

2008-07-10  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_timeout_add_full, g_idle_add_full, and g_child_watch_add_full
	bindings

2008-07-10  Jared Moore  <jaredm@svn.gnome.org>

	* ccode/valaccodedeclaration.vala:
	* ccode/valaccodemodifiers.vala:

	Added support for 'volatile' modifier in C code.

	* gobject/valatyperegisterfunction.vala:

	Make *_get_type functions thread safe, fixes bug 540705.

2008-07-10  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala:
	* vala/valaproperty.vala:

	Change GObject properties to always notify on value change, remove the