@@ -10,6 +10,7 @@ Carl-Anton Ingmarsson
 Cayle Graumann
 Christian Meyer
 Cyril Soldani
+Daniel Lucraft
 Daniel Silverstone
 Daniel Svensson
 David Keijser
