@@ -1,3 +1,10 @@
+2008-07-17  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valainterfacewriter.vala:
+
+	Fix support for static and class fields in interface writer,
+	based on patch by Daniel Lucraft, fixes bug 542879
+
 2008-07-13  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/packages/gdk-2.0/:
